--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -1,17 +1,17 @@
 - name: install stow
   apt: name=stow
-  tags: &dotfiles_tags ["main", "dotfiles"]
+  tags: ["main", "zsh", "nvim", "etc"]
 
 - name: clone repo
   git:
-      repo: git@github.com:NoseferatuWKF/.dotfiles.git
-      dest: "{{ lookup('env', 'HOME') }}/.dotfiles"
-      recursive: yes
-      update: yes
-      accept_hostkey: yes
-      version: master
-  tags: *dotfiles_tags
+    repo: https://github.com/NoseferatuWKF/.dotfiles.git
+    dest: "{{ home }}/.dotfiles"
+    recursive: yes
+    update: yes
+    accept_hostkey: yes
+    version: master
+  tags: ["main", "zsh", "nvim", "etc"]
 
 - name: stow
-  debug:
-    msg: (TODO)
+  shell: "cd {{ home }}/.dotfiles && stow --adopt * && git checkout ."
+  tags: ["main", "zsh", "nvim", "etc"]
