--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -13,17 +13,17 @@
 - name: zsh-autosuggestions
   ansible.builtin.git:
     repo: https://github.com/zsh-users/zsh-autosuggestions.git
-    dest: "{{ lookup('env', 'HOME') }}/.oh-my-zsh/plugins/zsh-autosuggestions"
+    dest: "{{ home }}/.oh-my-zsh/plugins/zsh-autosuggestions"
   tags: *zsh_tags 
 
 - name: zsh-syntax-highlighting
   git:
     repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
-    dest: "{{ lookup('env', 'HOME') }}/.oh-my-zsh/plugins/zsh-syntax-highlighting"
+    dest: "{{ home }}/.oh-my-zsh/plugins/zsh-syntax-highlighting"
   tags: *zsh_tags
 
 - name: powerlevel10k
   git:
     repo: https://github.com/romkatv/powerlevel10k.git
-    dest: "{{ lookup('env', 'HOME') }}/.oh-my-zsh/themes/powerlevel10k"
+    dest: "{{ home }}/.oh-my-zsh/themes/powerlevel10k"
   tags: *zsh_tags
