reflog remove sensitive histories >.-, finishing touches

--- a/local.yml
+++ b/local.yml
@@ -9,12 +9,23 @@
       force_apt_get: true
       update_cache: true
       state: present
-    tags: ["main", "docker", "nvim", "zsh", "etc"]
+    tags: ["main", "secrets", "docker", "nvim", "zsh", "etc"]
   tasks:
   # apparently include and import does different things
   # https://docs.ansible.com/ansible/2.9/user_guide/playbooks_reuse_includes.html#includes-vs-imports
+  - import_tasks: tasks/secrets.yml
   - import_tasks: tasks/docker.yml
   - import_tasks: tasks/zsh.yml
   - import_tasks: tasks/nvim.yml
   - import_tasks: tasks/etc.yml
   - import_tasks: tasks/dotfiles.yml
+  post_tasks:
+  - name: deep breaths
+    shell: curl https://raw.githubusercontent.com/NoseferatuWKF/ansible/master/shout-out | cat
+    register: shout
+    tags: &shout_out ["main", "shout-out"]
+
+  - name: SHOUT
+    debug:
+      msg: "{{ shout.stdout_lines }}"
+    tags: ["main", "shout-out"]
