--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -1,17 +1,15 @@
 - name: install stow
   apt: name=stow
-  tags: ["main", "zsh", "nvim", "etc"]
+  tags: &dotfile_tags ["main", "zsh", "nvim", "etc"]
 
 - name: clone repo
   git:
-    repo: https://github.com/NoseferatuWKF/.dotfiles.git
+    repo: git@github.com:NoseferatuWKF/.dotfiles.git
     dest: "{{ home }}/.dotfiles"
-    recursive: yes
-    update: yes
-    accept_hostkey: yes
+    accept_hostkey: true
     version: master
-  tags: ["main", "zsh", "nvim", "etc"]
+  tags: *dotfile_tags
 
 - name: stow
   shell: "cd {{ home }}/.dotfiles && stow --adopt * && git checkout ."
-  tags: ["main", "zsh", "nvim", "etc"]
+  tags: *dotfile_tags
