add discord integration, refactoring, and change to focal coz bionic lvl is too low for latest ansible

--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -8,6 +8,8 @@
     dest: "{{ home }}/.dotfiles"
     accept_hostkey: true
     version: master
+    force: true
+    update: true
   tags: *dotfile_tags
 
 - name: stow
