--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -15,7 +15,7 @@
 - name: apt repo
   become: true
   apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu bionic stable
+    repo: deb https://download.docker.com/linux/ubuntu focal stable
     state: present
   tags: *docker_tags
 
