--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -11,31 +11,31 @@
     path: "{{ home }}/.oh-my-zsh"
     state: directory
   register: omz
-  tags: *zsh_tags
+  tags: [*zsh_tags, "mac"]
 
 - name: uninstall if exists
   shell: "chmod a+x {{ home }}/.oh-my-zsh/tools/uninstall.sh && yes | {{ home }}/.oh-my-zsh/tools/uninstall.sh" 
   when: omz is defined
-  tags: *zsh_tags
+  tags: [*zsh_tags, "mac"]
 
 - name: oh-my-zsh
   shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-  tags: *zsh_tags
+  tags: [*zsh_tags, "mac"]
 
 - name: zsh-autosuggestions
   ansible.builtin.git:
     repo: https://github.com/zsh-users/zsh-autosuggestions.git
     dest: "{{ home }}/.oh-my-zsh/plugins/zsh-autosuggestions"
-  tags: *zsh_tags 
+  tags: [*zsh_tags, "mac"] 
 
 - name: zsh-syntax-highlighting
   git:
     repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
     dest: "{{ home }}/.oh-my-zsh/plugins/zsh-syntax-highlighting"
-  tags: *zsh_tags
+  tags: [*zsh_tags, "mac"]
 
 - name: powerlevel10k
   git:
     repo: https://github.com/romkatv/powerlevel10k.git
     dest: "{{ home }}/.oh-my-zsh/themes/powerlevel10k"
-  tags: *zsh_tags
+  tags: [*zsh_tags, "mac"]
