--- a/tasks/nvim.yml
+++ b/tasks/nvim.yml
@@ -5,17 +5,21 @@
   tags: &nvim_tags ["main", "nvim"]
 
 - name: mac deps
-  shell: "brew install ninja libtool cmake pkg-config gettext curl"
-  tags: [*nvim_tags, "mac"]
+  shell: "brew install ninja libtool cmake pkg-config gettext curl ripgrep"
+  tags: mac
 
 - name: clone
   git:
     repo: https://github.com/neovim/neovim.git
-    dest: "{{ lookup('env', 'HOME') }}/neovim"
+    dest: "{{ home }}/neovim"
+    force: true
   tags: [*nvim_tags, "mac"]
 
 - name: build & install
   become: true
-  shell: "cd {{ lookup('env', 'HOME') }}/neovim && make CMAKE_BUILD_TYPE=RelWithDebInfo && make install"
+  shell: "cd {{ home }}/neovim && make CMAKE_BUILD_TYPE=RelWithDebInfo && make install"
   tags: [*nvim_tags, "mac"]
 
+- name: resolve mac sudo prob
+  become: true
+  shell: "sudo chown /usr/local/bin/nvim && sudo chown -R $(whoami) .local"
