--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -1,10 +1,11 @@
 - name: install stow
+  become: true
   apt: name=stow
-  tags: &dotfile_tags ["main", "zsh", "nvim", "etc"]
+  tags: &dotfiles_tags ["main", "dotfiles", "zsh", "nvim", "etc"]
 
 - name: mac stow
   shell: "brew install stow"
-  tags: mac
+  tags: ["brew", "mac"]
 
 - name: clone repo
   git:
@@ -14,8 +15,8 @@
     version: master
     force: true
     update: true
-  tags: [*dotfile_tags, "mac"]
+  tags: [*dotfiles_tags, "mac"]
 
 - name: stow
-  shell: "cd {{ home }}/.dotfiles && stow --adopt * && git checkout ."
-  tags: [*dotfile_tags, "mac"]
+  shell: "cd {{ home }}/.dotfiles && stow --adopt * && git restore ."
+  tags: [*dotfiles_tags, "mac"]
