--- a/local.yml
+++ b/local.yml
@@ -42,12 +42,13 @@
     tags: ["main", "secrets", "docker", "nvim", "zsh", "brave", "etc"]
   tasks:
   - import_tasks: tasks/secrets.yml
+  - import_tasks: tasks/chrome.yml
   - import_tasks: tasks/docker.yml
   - import_tasks: tasks/zsh.yml
   - import_tasks: tasks/nvim.yml
   - import_tasks: tasks/etc.yml
+  - import_tasks: tasks/obsidian.yml
   - import_tasks: tasks/dotfiles.yml
-  - import_tasks: tasks/brave.yml
   post_tasks:
   - import_tasks: post-tasks/discord.yml
   - import_tasks: post-tasks/shout-out.yml
