--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -7,12 +7,16 @@
 
 - name: gpg
   become: true
-  shell: "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker.gpg"
+  shell: >
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | 
+    gpg --dearmor -o /usr/share/keyrings/docker.gpg
   tags: *docker_tags
 
 - name: apt repo
   become: true
-  shell: echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+  shell: >
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | 
+    tee /etc/apt/sources.list.d/docker.list > /dev/null
   tags: *docker_tags
 
 - name: install finally
