--- a/tasks/nvim.yml
+++ b/tasks/nvim.yml
@@ -18,10 +18,14 @@
 
 - name: build & install
   become: true
-  shell: "cd {{ home }}/neovim && make CMAKE_BUILD_TYPE=RelWithDebInfo && make install"
+  shell: >
+    cd {{ home }}/neovim && 
+    make CMAKE_BUILD_TYPE=RelWithDebInfo && make install
   tags: [*nvim_tags, "mac"]
 
 - name: resolve mac sudo prob
   become: true
-  shell: "sudo chown /usr/local/bin/nvim && sudo chown -R $(whoami) .local"
+  shell: >
+    sudo chown /usr/local/bin/nvim && 
+    sudo chown -R $(whoami) .local
   tags: ["brew", "mac"] # brew tag here to skip for non macs
