--- a/tasks/zsh.yml
+++ b/tasks/zsh.yml
@@ -14,12 +14,15 @@
   tags: [*zsh_tags, "mac"]
 
 - name: uninstall if exists
-  shell: "chmod a+x {{ home }}/.oh-my-zsh/tools/uninstall.sh && yes | {{ home }}/.oh-my-zsh/tools/uninstall.sh" 
+  shell: >
+    chmod a+x {{ home }}/.oh-my-zsh/tools/uninstall.sh && 
+    yes | {{ home }}/.oh-my-zsh/tools/uninstall.sh 
   when: omz.stat.exists == true
   tags: [*zsh_tags, "mac"]
 
 - name: oh-my-zsh
-  shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+  shell: >
+    sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
   tags: [*zsh_tags, "mac"]
 
 - name: zsh-autosuggestions
