refactor, flameshot, mac support

--- a/post-tasks/shout-out.yml
+++ b/post-tasks/shout-out.yml
@@ -1,9 +1,9 @@
 - name: deep breaths
   shell: curl https://raw.githubusercontent.com/NoseferatuWKF/ansible/master/shout-out | cat
   register: shout
-  tags: &shout_out ["main", "shout-out"]
+  tags: &shout_out ["main", "mac", "shout-out"]
 
 - name: SHOUT
   debug:
     msg: "{{ shout.stdout_lines }}"
-  tags: ["main", "shout-out"]
+  tags: *shout_out
