missing deps, moved i3

--- a/local.yml
+++ b/local.yml
@@ -39,21 +39,22 @@
       force_apt_get: true
       update_cache: true
       state: present
-    tags: ["main", "secrets", "docker", "nvim", "zsh", "brave", "etc"]
+    tags: ["main"]
   tasks:
   - import_tasks: tasks/secrets.yml
   - import_tasks: tasks/chrome.yml
   - import_tasks: tasks/docker.yml
   - import_tasks: tasks/zsh.yml
   - import_tasks: tasks/nvim.yml
+  - import_tasks: tasks/i3.yml
   - import_tasks: tasks/etc.yml
-  - import_tasks: tasks/coding.yml
   - import_tasks: tasks/obsidian.yml
   - import_tasks: tasks/slack.yml
   - import_tasks: tasks/discord.yml
   - import_tasks: tasks/spotify.yml
-  - import_tasks: tasks/dotfiles.yml
   - import_tasks: tasks/aesthetics.yml
+  - import_tasks: tasks/dotfiles.yml
+  - import_tasks: tasks/coding.yml
   post_tasks:
   - import_tasks: post-tasks/discord.yml
   - import_tasks: post-tasks/shout-out.yml
