--- a/tasks/coding.yml
+++ b/tasks/coding.yml
@@ -5,15 +5,15 @@
 
 - name: rust
   shell: >
-    curl --proto "=https" --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && 
+    curl --proto "=https" --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
     . {{ home }}/.cargo/env
   tags: [*coding_tags, "rust"]
 
 - name: go
   become: true
   shell: >
-    curl --proto "=https" --tlsv1.2 -sSf https://dl.google.com/go/go1.20.2.linux-amd64.tar.gz -o {{ home }}/go.tar.gz && 
-    tar -C /usr/local -xzf {{ home }}/go.tar.gz && 
+    curl --proto "=https" --tlsv1.2 -sSf https://dl.google.com/go/go1.20.2.linux-amd64.tar.gz -o {{ home }}/go.tar.gz && \
+    tar -C /usr/local -xzf {{ home }}/go.tar.gz && \
     rm {{ home }}/go.tar.gz
   tags: [*coding_tags, "go"]
 
@@ -26,7 +26,7 @@
 
 - name: fnm nodejs
   shell: >
-    curl -fsSL https://fnm.vercel.app/install | bash && 
+    curl -fsSL https://fnm.vercel.app/install | bash && \
     exec zsh -c "source {{ home }}/.zshrc"
   tags: [*coding_tags, "nodejs"]
 
