--- a/tasks/etc.yml
+++ b/tasks/etc.yml
@@ -55,3 +55,12 @@
     url: https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/Hack/Regular/complete/Hack%20Regular%20Nerd%20Font%20Complete.ttf
     dest: "{{ home }}/.local/share/fonts/Hack Regular Nerd Font Complete.ttf"
   tags: *fonts_tags
+
+- name: gh cli
+  become: true
+  shell: >
+    curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | \
+    gpg --dearmor -o /usr/share/keyrings/githubcli-archive-keyring.gpg
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | \
+    tee /etc/apt/sources.list.d/github-cli.list > /dev/null && apt update && apt install -y gh
+  tags: ["main", "gh", "etc"]
