--- a/tasks/nvim.yml
+++ b/tasks/nvim.yml
@@ -15,6 +15,6 @@
 - name: build & install
   become: true
   shell: >
-    cd {{ home }}/neovim && 
+    cd {{ home }}/neovim && \
     make CMAKE_BUILD_TYPE=RelWithDebInfo && make install
   tags: *nvim_tags
