--- a/tasks/etc.yml
+++ b/tasks/etc.yml
@@ -13,13 +13,6 @@
       - flameshot
   tags: ["main", "nvim", "tmux", "etc"]
 
-- name: git editor
-  git_config:
-    name: core.editor
-    scope: global
-    value: /usr/local/bin/nvim
-  tags: ["main", "nvim", "git", "etc"]
-
 - name: tpm
   git:
     repo: https://github.com/tmux-plugins/tpm
@@ -34,25 +27,25 @@
 
 - name: install Hack Bold
   get_url:
-    url: https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/Hack/Bold/complete/Hack%20Bold%20Nerd%20Font%20Complete.ttf
+    url: https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/Hack/Bold/HackNerdFont-Bold.ttf
     dest: "{{ home }}/.local/share/fonts/Hack Bold Nerd Font Complete.ttf"
   tags: *fonts_tags
 
 - name: install Hack BoldItalic
   get_url:
-    url: https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/Hack/BoldItalic/complete/Hack%20Bold%20Italic%20Nerd%20Font%20Complete.ttf
+    url: https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/Hack/BoldItalic/HackNerdFont-BoldItalic.ttf
     dest: "{{ home }}/.local/share/fonts/Hack BoldItalic Nerd Font Complete.ttf"
   tags: *fonts_tags
 
 - name: install Hack Italic
   get_url:
-    url: https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/Hack/Italic/complete/Hack%20Italic%20Nerd%20Font%20Complete.ttf
+    url: https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/Hack/Italic/HackNerdFont-Italic.ttf
     dest: "{{ home }}/.local/share/fonts/Hack Italic Nerd Font Complete.ttf"
   tags: *fonts_tags
 
 - name: install Hack Regular
   get_url:
-    url: https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/Hack/Regular/complete/Hack%20Regular%20Nerd%20Font%20Complete.ttf
+    url: https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/Hack/Regular/HackNerdFont-Regular.ttf
     dest: "{{ home }}/.local/share/fonts/Hack Regular Nerd Font Complete.ttf"
   tags: *fonts_tags
 
@@ -60,7 +53,7 @@
   become: true
   shell: >
     curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | \
-    gpg --dearmor -o /usr/share/keyrings/githubcli-archive-keyring.gpg
+    gpg --dearmor -o /usr/share/keyrings/githubcli-archive-keyring.gpg && \
     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | \
     tee /etc/apt/sources.list.d/github-cli.list > /dev/null && apt update && apt install -y gh
   tags: ["main", "gh", "etc"]
