--- a/playbooks/pop.yml
+++ b/playbooks/pop.yml
@@ -33,28 +33,28 @@
       3465316230393833660a373333616430613531623635326332376338633731663132323037373738
       30656461666536336433656361316330623636623233336236633532336538643765
   pre_tasks:
-  - name: update
-    become: true
-    apt:
-      force_apt_get: true
+    - name: update
+      become: true
+      apt:
+        force_apt_get: true
       update_cache: true
       state: present
-    tags: main
+      tags: main
   tasks:
-    # - import_tasks: tasks/secrets.yml
-    # - import_tasks: tasks/chrome.yml
-    # - import_tasks: tasks/zsh.yml
-    # - import_tasks: tasks/nvim.yml
-    # - import_tasks: tasks/i3.yml
-    # - import_tasks: tasks/etc.yml
-    # - import_tasks: tasks/obsidian.yml
-    # - import_tasks: tasks/slack.yml
-    # - import_tasks: tasks/discord.yml
-    # - import_tasks: tasks/spotify.yml
-    # - import_tasks: tasks/aesthetics.yml
-  - import_tasks: tasks/dotfiles.yml
-  - import_tasks: tasks/coding.yml
-  - import_tasks: tasks/nerdctl.yml
+    - import_tasks: ../tasks/secrets.yml
+    - import_tasks: ../tasks/chrome.yml
+    - import_tasks: ../tasks/zsh.yml
+    - import_tasks: ../tasks/nvim.yml
+    - import_tasks: ../tasks/i3.yml
+    - import_tasks: ../tasks/etc.yml
+    - import_tasks: ../tasks/obsidian.yml
+    - import_tasks: ../tasks/slack.yml
+    - import_tasks: ../tasks/discord.yml
+    - import_tasks: ../tasks/spotify.yml
+    - import_tasks: ../tasks/aesthetics.yml
+    - import_tasks: ../tasks/dotfiles.yml
+    - import_tasks: ../tasks/coding.yml
+    - import_tasks: ../tasks/nerdctl.yml
   post_tasks:
-  - import_tasks: post-tasks/discord.yml
-  - import_tasks: post-tasks/shout-out.yml
+    - import_tasks: ../post-tasks/discord.yml
+    - import_tasks: ../post-tasks/shout-out.yml
